# documentdb

./: CHANGELOG.md  Makefile  Makefile.cflags  README.md  documentdb_errors.csv  error_mappings.csv  index.html  rust-toolchain.toml  syncpoint_oss.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_gateway.yml  deploy_docs.yml  gateway_tests.yml  internal-ci-trigger.yml
docs/v1/: gateway.md  index.md  otel-for-documentdb.md  telemetry.md
internal/pg_documentdb_distributed/: documentdb_distributed.control
internal/pg_documentdb_distributed/include/: documentdb_distributed_init.h
internal/pg_documentdb_distributed/sql/: documentdb_distributed--0.109-0--0.110-0.sql
internal/pg_documentdb_distributed/src/: documentdb_distributed.c
pg_documentdb/: Makefile  documentdb.control
pg_documentdb/include/: api_hooks.h  api_hooks_common.h  api_hooks_def.h  documentdb_api_init.h
pg_documentdb/include/aggregation/: bson_aggregation_pipeline.h  bson_project.h  bson_query_common.h
pg_documentdb/include/commands/: commands_common.h  create_indexes.h  diagnostic_commands.h
pg_documentdb/include/customscan/: bson_custom_query_scan.h  bson_custom_scan_private.h
pg_documentdb/include/index_am/: documentdb_rum.h  index_am_exports.h  index_am_extend.h  index_am_utils.h
pg_documentdb/include/metadata/: collection.h  index.h  metadata_cache.h
pg_documentdb/include/opclass/: bson_gin_composite_private.h  bson_gin_composite_scan.h  bson_gin_index_mgmt.h  bson_gin_index_term.h
pg_documentdb/include/operators/: bson_expression.h
pg_documentdb/sql/: documentdb--0.109-0--0.110-0.sql  documentdb--0.110-0--0.111-0.sql
pg_documentdb/src/: api_hooks.c  function_stubs.c  pg_documentdb.c
pg_documentdb_core/: Makefile  documentdb_core.control
pg_documentdb_core/include/: bson_init.h
pg_documentdb_core/src/: bson_init.c  pg_documentdb_core.c
pg_documentdb_extended_rum/: documentdb_extended_rum.control
pg_documentdb_extended_rum/src/: documentdb_extended_rum_adapter.c
pg_documentdb_gw/: CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  NOTICE  SetupConfiguration.json  about.toml  clippy.toml  deny.toml
pg_documentdb_gw/.cargo/: config.toml
pg_documentdb_gw/documentdb_gateway/: Cargo.toml
pg_documentdb_gw/documentdb_gateway/src/: main.rs
pg_documentdb_gw/documentdb_gateway_core/: Cargo.toml
pg_documentdb_gw/documentdb_gateway_core/benches/: insert_bench.rs
pg_documentdb_gw/documentdb_gateway_core/src/: auth.rs  bson.rs  error.rs  lib.rs  shutdown_controller.rs  startup.rs
pg_documentdb_gw/documentdb_gateway_core/src/configuration/: certs.rs  dynamic.rs  mod.rs  pg_configuration.rs  setup.rs  version.rs
pg_documentdb_gw/documentdb_gateway_core/src/context/: connection.rs  cursor.rs  mod.rs  request.rs  service.rs  transaction.rs
pg_documentdb_gw/documentdb_gateway_core/src/explain/: documentdb_explain_output.schema.json  mod.rs  model.rs  query_diagnostics.rs
pg_documentdb_gw/documentdb_gateway_core/src/postgres/: document.rs  mod.rs  transaction.rs
pg_documentdb_gw/documentdb_gateway_core/src/postgres/conn_mgmt/: connection.rs  connection_pool.rs  mod.rs  pool_manager.rs  pool_settings.rs
pg_documentdb_gw/documentdb_gateway_core/src/processor/: constant.rs  cursor.rs  data_management.rs  indexing.rs  ismaster.rs  mod.rs  process.rs  roles.rs  session.rs  transaction.rs  users.rs
pg_documentdb_gw/documentdb_gateway_core/src/protocol/: bson_writer.rs  header.rs  message.rs  mod.rs  op_insert.rs  op_query.rs  opcode.rs  reader.rs  util.rs
pg_documentdb_gw/documentdb_gateway_core/src/requests/: mod.rs  read_concern.rs  read_preference.rs  request_tracker.rs
pg_documentdb_gw/documentdb_gateway_core/src/responses/: constant.rs  error.rs  mod.rs  pg.rs  raw.rs  writer.rs
pg_documentdb_gw/documentdb_gateway_core/src/service/: docdb_openssl.rs  mod.rs  tls.rs
pg_documentdb_gw/documentdb_gateway_core/src/telemetry/: client_info.rs  config.rs  context_propagation.rs  event_id.rs  logging.rs  metrics.rs  mod.rs  telemetry_manager.rs  tracing.rs  verbose_latency.rs
pg_documentdb_gw/documentdb_macros/: Cargo.toml  postgres_errors.csv
pg_documentdb_gw/documentdb_macros/src/: lib.rs
pg_documentdb_gw/documentdb_tests/: Cargo.toml
pg_documentdb_gw/documentdb_tests/src/: lib.rs
pg_documentdb_gw/documentdb_tests/src/commands/: aggregate.rs  coll_stats.rs  collection_cmd.rs  compact.rs  constant.rs  count.rs  current_op.rs  cursor.rs  delete.rs  distinct.rs  explain.rs  find.rs  find_and_modify.rs  indexing.rs  insert.rs  killop.rs  list_collections.rs  list_databases.rs  multi_connect.rs  session.rs  text_search.rs  transaction.rs  update.rs  users.rs  validate_cmd.rs
pg_documentdb_gw/documentdb_tests/src/test_setup/: clients.rs  config.rs  gateway.rs  initialize.rs  mod.rs  postgres.rs
pg_documentdb_gw/documentdb_tests/src/utils/: commands.rs  mod.rs  users.rs
pg_documentdb_gw/documentdb_tests/tests/: command_rbac_tests.rs  command_tests.rs  compact_tests.rs  current_op_tests.rs  cursor_tests.rs  error_tests.rs  explain_tests.rs  index_tests.rs  invalid_index_tests.rs  killop_tests.rs  list_databases_tests.rs  multi_connect_tests.rs  response_length_tests.rs  sessions_tests.rs  ssl_tests.rs  text_search_tests.rs  transaction_tests.rs  unauthenticated_tests.rs  unix_socket_tests_disabled.rs  unix_socket_tests_enabled.rs  user_crud_tests.rs
pg_documentdb_gw/src/: lib.rs  main.rs
pg_documentdb_gw/src/configuration/: setup.rs
pg_documentdb_gw/src/processor/: data_management.rs
pg_documentdb_gw/src/requests/: mod.rs
pg_documentdb_gw/src/telemetry/: config.rs  context_propagation.rs  logging.rs  metrics.rs  mod.rs  telemetry_manager.rs
pg_documentdb_gw_host/: Cargo.toml  Makefile.toml
pg_documentdb_gw_host/src/: bgworker.rs
rfcs/: 0005-functional-testing.md  XXXX-gateway-opentelemetry.md
scripts/: combine_all_error_mappings.sh  emulator_entrypoint.sh  generate_notice.sh  install_pgrx.sh  install_rust_tools.sh  install_setup_postgres.sh  run_rust_tests_with_junit.sh  setup_versions.sh
(+301 files in other folders)
