## Workspace section

[workspace]
members = ["documentdb_gateway", "documentdb_tests", "documentdb_gateway_core", "documentdb_macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
arc-swap = "1.7.1"
async-recursion = "1.0.5"
async-trait = "0.1.88"
base64 = "0.22.1"
bitflags = "1.1.0"
bson = "2.7.0"
bytes = "1.11.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
dashmap = { version = "6.1.0", default-features = false, features = ["inline"] }
deadpool-postgres = "0.11.0"
documentdb_macros = { path = "documentdb_macros" }
documentdb_gateway_core = { path = "documentdb_gateway_core" }
dyn-clone = "1.0.19"
either = "1.13.0"
futures = "0.3.31"
hex = "0.4.3"
# mongodb rust driver that we use to write test cases for DocumentDB
mongodb = { version = "3.2.0", default-features = false, features = [
    "dns-resolver",
    "openssl-tls",
    "compat-3-0-0",
] }
notify = "6"
once_cell = "1.18.0"
openssl = "0.10.73"
opentelemetry = { version = "0.30", features = ["metrics", "logs", "trace"] }
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics", "logs", "trace"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "metrics", "logs", "trace"] }
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
socket2 = "0.5.7"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6.5"
tokio-postgres = { version = "0.7.10", features = [
    "with-serde_json-1",
    "array-impls",
] }
tokio-util = "0.7.9"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.12.1", features = ["v4"] }
whoami = "1.6.0"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

needless_pass_by_ref_mut = "warn"
unused_async = "warn"

## Profile section

[profile.release-with-symbols]
inherits = "release"
# Generates the minimal amount of debug info for backtraces with filename/line number info, but not anything else
debug = "line-tables-only"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
