## Workspace section

[workspace]
members = ["documentdb_gateway", "documentdb_tests", "documentdb_gateway_core", "documentdb_macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/documentdb/documentdb"
readme = "../README.md"
keywords = ["documentdb", "gateway"]
categories = ["database"]

[workspace.dependencies]
arc-swap = "1.7.1"
async-recursion = "1.0.5"
async-trait = "0.1.88"
base64 = "0.22.1"
bitflags = "1.1.0"
bson = "2.7.0"
bytes = "1.11.1"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
dashmap = { version = "6.1.0", default-features = false, features = ["inline"] }
deadpool-postgres = "0.11.0"
documentdb_macros = { path = "documentdb_macros" }
documentdb_gateway_core = { path = "documentdb_gateway_core" }
dyn-clone = "1.0.19"
either = "1.13.0"
futures = "0.3.31"
hex = "0.4.3"
# mongodb rust driver that we use to write test cases for DocumentDB
mongodb = { version = "3.2.0", default-features = false, features = [
    "dns-resolver",
    "openssl-tls",
    "compat-3-0-0",
] }
once_cell = "1.18.0"
openssl = "0.10.73"
opentelemetry = { version = "0.30", features = ["metrics"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "metrics"] }
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
socket2 = "0.5.7"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6.5"
tokio-postgres = { version = "0.7.10", features = [
    "with-serde_json-1",
    "array-impls",
] }
tokio-util = "0.7.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4"] }
whoami = "1.6.0"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
expect_used = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"

# Define custom opt outs here
# TODO: tackle this issue down in the separate PR
multiple_crate_versions = "allow"
# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
# If the function has side-effects, not calling it will change the semantic of the program
or_fun_call = "allow"
# Convolutes code
option_if_let_else = "allow"

## Profile section

[profile.release-with-symbols]
inherits = "release"
# Generates the minimal amount of debug info for backtraces with filename/line number info, but not anything else
debug = "line-tables-only"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
