[package]
name = "documentdb_gateway_core"
description = "A gateway library for DocumentDB."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arc-swap.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
base64.workspace = true
bitflags.workspace = true
bson.workspace = true
bytes.workspace = true
dashmap.workspace = true
deadpool-postgres.workspace = true
documentdb_macros.workspace = true
dyn-clone.workspace = true
either.workspace = true
hex.workspace = true
once_cell.workspace = true
openssl.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tokio-openssl.workspace = true
tokio-postgres.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
whoami.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "insert_bench"
harness = false

[lints]
workspace = true
